syntax = "proto3";

package auth;

option go_package = "auth/app/types";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc ConfirmAccount(ConfirmAccountRequest) returns (ConfirmAccountResponse);
  rpc RequestPasswordReset(RequestPasswordResetRequest) returns (RequestPasswordResetResponse);
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  rpc ValidateInternalAccess(ValidateInternalAccessRequest) returns (ValidateInternalAccessResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc GenerateConfirmToken(GenerateConfirmTokenRequest) returns (GenerateConfirmTokenResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  uint64 user_id = 1;
  string email = 2;
  string confirm_token = 3;
  string message = 4;
  repeated string roles = 5;
}

message LoginRequest {
  string email = 1;
  string password = 2;
  int64 token_duration = 3;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
  repeated string roles = 4;
}

message LogoutRequest {
  string refresh_token = 1;
  string access_token = 2;
}

message LogoutResponse {
  string message = 1;
}

message ChangePasswordRequest {
  string access_token = 1;
  string old_password = 2;
  string new_password = 3;
}

message ChangePasswordResponse {
  string message = 1;
}

message ConfirmAccountRequest {
  string token = 1;
}

message ConfirmAccountResponse {
  string message = 1;
}

message RequestPasswordResetRequest {
  string email = 1;
}

message RequestPasswordResetResponse {
  string reset_token = 1;
  string message = 2;
}

message ResetPasswordRequest {
  string token = 1;
  string new_password = 2;
}

message ResetPasswordResponse {
  string message = 1;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_in = 3;
  repeated string roles = 4;
}

message GenerateConfirmTokenRequest {
  string email = 1;
}

message GenerateConfirmTokenResponse {
  string confirm_token = 1;
  string message = 2;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  uint64 user_id = 2;
  string email = 3;
  repeated string roles = 4;
}

message ValidateInternalAccessRequest {
  string api_key = 1;
}

message ValidateInternalAccessResponse {
  string service_name = 1;
  repeated string allowed_access = 2;
}
